trait-xml/tests/fail/where_clause_tc_noty.stderr
error: error parsing type clause: no type provided. caller: `::trait_xml::trait_xml_parse_where`
  --> tests/fail/where_clause_tc_noty.rs:1:1
   |
1  | / trait_xml::trait_xml! {
2  | |     <trait>
3  | |         <name>Foo</name>
4  | |         <bounds>
...  |
15 | |     </trait>
16 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::trait_xml_parse_type_clause` which comes from the expansion of the macro `trait_xml::trait_xml` (in Nightly builds, run with -Z macro-backtrace for more info)
